# EBCMeeting-Agents-Crewai

./: LICENSE  README.md  agents.py  main.py  pyproject.toml  requirements.txt  tasks.py
src/: agents.py  tasks.py
src/tools/: NvidiaSolutionsTool.py
tools/: ExaSearchTool.py
